<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.questions.QuestionsFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="40dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/questions"
                style="@style/titleVacc"
                android:text="@string/question"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/description"
                style="@style/descriptionVacc"
                android:text="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questions" />
            <TextView
                android:id="@+id/title_questions1"
                style="@style/titleVacc"
                android:text="@string/question1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />
            <TextView
                android:id="@+id/description1"
                style="@style/descriptionVacc"
                android:text="@string/description1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_questions1" />
            <TextView
                android:id="@+id/title_questions2"
                style="@style/titleVacc"
                android:text="@string/question2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description1" />
            <TextView
                android:id="@+id/description2"
                style="@style/descriptionVacc"
                android:text="@string/description2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_questions2" />
            <TextView
                android:id="@+id/title_questions3"
                style="@style/titleVacc"
                android:text="@string/question3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description2" />
            <TextView
                android:id="@+id/description3"
                style="@style/descriptionVacc"
                android:text="@string/description3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_questions3" />
            <TextView
                android:id="@+id/title_questions4"
                style="@style/titleVacc"
                android:text="@string/question4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description3" />
            <TextView
                android:id="@+id/description4"
                style="@style/descriptionVacc"
                android:text="@string/description4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_questions4" />
            <TextView
                android:id="@+id/title_questions5"
                style="@style/titleVacc"
                android:text="@string/question5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description4" />
            <TextView
                android:id="@+id/description5"
                style="@style/descriptionVacc"
                android:text="@string/description5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_questions5" />
            <TextView
                android:id="@+id/title_questions6"
                style="@style/titleVacc"
                android:text="@string/question6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description5" />
            <TextView
                android:id="@+id/description6"
                style="@style/descriptionVacc"
                android:text="@string/description6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_questions6" />
            <TextView
                android:id="@+id/title_questions7"
                style="@style/titleVacc"
                android:text="@string/question7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description6" />
            <TextView
                android:id="@+id/description7"
                style="@style/descriptionVacc"
                android:text="@string/description7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_questions7" />
            <TextView
                android:id="@+id/title_questions8"
                style="@style/titleVacc"
                android:text="@string/question8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description7" />
            <TextView
                android:id="@+id/description8"
                style="@style/descriptionVacc"
                android:text="@string/description8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_questions8" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
