<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pmf.unsa.imunizacija.Pfizer">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background"
                android:fitsSystemWindows="true"
                app:collapsedTitleTextAppearance="@style/Theme.AppCompat.NoActionBar"
                app:contentScrim="@color/colorPrimary"
                app:expandedTitleTextAppearance="@style/Theme.AppCompat.NoActionBar"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|end"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pfizer_img"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin" />


            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_shape"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="100dp">

                <TextView
                    android:id="@+id/textView3"
                    style="@style/descriptionVacc"
                    android:text="@string/Pfizer1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView17"
                    style="@style/descriptionVacc"
                    android:text="@string/Pfizer2"
                    app:layout_constraintEnd_toEndOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <TextView
                    android:id="@+id/textView19"
                    style="@style/descriptionVacc"
                    android:text="@string/Pfizer3"
                    app:layout_constraintEnd_toEndOf="@+id/textView17"
                    app:layout_constraintStart_toStartOf="@+id/textView17"
                    app:layout_constraintTop_toBottomOf="@+id/textView17" />

                <TextView
                    android:id="@+id/textView20"
                    style="@style/descriptionVacc"
                    android:text="@string/Pfizer4"
                    app:layout_constraintEnd_toEndOf="@+id/textView19"
                    app:layout_constraintStart_toStartOf="@+id/textView19"
                    app:layout_constraintTop_toBottomOf="@+id/textView19" />

                <TextView
                    android:id="@+id/textView21"
                    style="@style/descriptionVacc"
                    android:text="@string/Pfizer5"
                    app:layout_constraintEnd_toEndOf="@+id/textView20"
                    app:layout_constraintStart_toStartOf="@+id/textView20"
                    app:layout_constraintTop_toBottomOf="@+id/textView20" />

                <TextView
                    android:id="@+id/textView22"
                    style="@style/descriptionVacc"
                    android:layout_width="match_parent"
                    android:text="@string/Pfizer6"
                    app:layout_constraintTop_toBottomOf="@+id/textView21"
                    tools:layout_editor_absoluteX="30dp" />

                <TextView
                    android:id="@+id/textView23"
                    style="@style/titleVacc"
                    android:layout_width="match_parent"
                    android:text="@string/Pfizer7"
                    app:layout_constraintTop_toBottomOf="@+id/textView22"
                    tools:layout_editor_absoluteX="62dp" />

                <TextView
                    android:id="@+id/textView24"
                    style="@style/descriptionVacc"
                    android:layout_width="match_parent"
                    android:text="@string/Pfizer8"
                    app:layout_constraintTop_toBottomOf="@+id/textView23"
                    tools:layout_editor_absoluteX="30dp" />

                <TextView
                    android:id="@+id/textView25"
                    style="@style/descriptionVacc"
                    android:layout_width="match_parent"
                    android:text="@string/Pfizer9"
                    app:layout_constraintTop_toBottomOf="@+id/textView24"
                    tools:layout_editor_absoluteX="30dp" />

                <TextView
                    android:id="@+id/textView26"
                    style="@style/titleVacc"
                    android:layout_width="match_parent"
                    android:text="@string/Pfizer10"
                    app:layout_constraintTop_toBottomOf="@+id/textView25"
                    tools:layout_editor_absoluteX="30dp" />

                <TextView
                    android:id="@+id/textView27"
                    style="@style/descriptionVacc"
                    android:layout_width="match_parent"
                    android:text="@string/Pfizer11"
                    app:layout_constraintTop_toBottomOf="@+id/textView26"
                    tools:layout_editor_absoluteX="16dp" />

                <TextView
                    android:id="@+id/textView282"
                    style="@style/titleVacc"
                    android:layout_width="match_parent"
                    android:text="@string/Pfizer12"
                    app:layout_constraintTop_toBottomOf="@+id/textView27"
                    tools:layout_editor_absoluteX="16dp" />

                <TextView
                    android:id="@+id/textView29"
                    style="@style/descriptionVacc"
                    android:layout_width="match_parent"
                    android:text="@string/Pfizer13"
                    app:layout_constraintTop_toBottomOf="@+id/textView282"
                    tools:layout_editor_absoluteX="16dp" />

                <TextView
                    android:id="@+id/textView30"
                    style="@style/titleVacc"
                    android:layout_width="match_parent"
                    android:text="@string/Pfizer14"
                    app:layout_constraintTop_toBottomOf="@+id/textView29"
                    tools:layout_editor_absoluteX="16dp" />

                <TextView
                    android:id="@+id/textView31"
                    style="@style/descriptionVacc"
                    android:layout_width="match_parent"
                    android:text="@string/Pfizer15"
                    app:layout_constraintTop_toBottomOf="@+id/textView30"
                    tools:layout_editor_absoluteX="30dp" />

                <TextView
                    android:id="@+id/textView32"
                    style="@style/descriptionVacc"
                    android:text="@string/Pfizer16"
                    app:layout_constraintEnd_toEndOf="@+id/textView21"
                    app:layout_constraintStart_toStartOf="@+id/textView21"
                    app:layout_constraintTop_toBottomOf="@+id/textView31" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>